Fix/237 shifting (#184)
* fix: shifting course info

* fix: style

--- a/frontend/src/components/RegisterForm/styles.module.sass
+++ b/frontend/src/components/RegisterForm/styles.module.sass
@@ -34,6 +34,9 @@
     text-align: start !important
     font-weight: unset !important
 
+  & li
+    color: unset
+
   &__column
     padding: 0 !important
     max-width: 450px
